GNOME Bugzilla – Bug 707966
Fixes for ignore-hosts setting handling
Last modified: 2013-09-13 11:25:17 UTC
See https://bugzilla.redhat.com/show_bug.cgi?id=1003152 for the original bug report.
Created attachment 254770 [details] [review] network: Don't include spaces in proxy's ignore-hosts setting We should also ignore any zero length strings resulting from g_strsplit_set().
Created attachment 254771 [details] [review] network: Fix empty ignore-hosts setting If the ignore-hosts setting is set to an empty array we were using unintialized memory. This also now ignores zero length strings if there are any in the array.
Review of attachment 254770 [details] [review]: looks good, otherwise ::: panels/network/net-proxy.c @@ +296,3 @@ + for (p = av; *p; ++p) + if (*p[0] != '\0') + g_variant_builder_add (&builder, "s", *p); I would put { } around the body of the loop here, just for clarity.
Review of attachment 254771 [details] [review]: that looks nicer anyway, than using a ginormous buffer on the stack
Pushed with braces added to both master and gnome-3-8: fc1317d..d2a1764 gnome-3-8 -> gnome-3-8 5f21f92..0f64dd1 master -> master Attachment 254770 [details] pushed as fb74444 - network: Don't include spaces in proxy's ignore-hosts setting Attachment 254771 [details] pushed as 0f64dd1 - network: Fix empty ignore-hosts setting