network: Don't include spaces in proxy's ignore-hosts setting

We should also ignore any zero length strings resulting from
g_strsplit_set().

https://bugzilla.gnome.org/show_bug.cgi?id=707966